<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
tools:context="com.example.juanacastro.foodoclock.view.fragment.InfoFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/precio_promedio"
                    android:theme="@style/EditTextBlack"
                    />


        <android.support.design.widget.TextInputEditText
            android:id="@+id/Tipo_pago_credito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Tipo_pago_credito"
            android:theme="@style/EditTextBlack"
            />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/Tipo_comida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Tipo_restaurante"
            android:theme="@style/EditTextBlack"
            />
        <android.support.design.widget.TextInputEditText
            android:id="@+id/Descripcion_restaurante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripcion"
            android:theme="@style/EditTextBlack"
            />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/Tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/barra"
            android:theme="@style/EditTextBlack"
            />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/Tips_parqueadores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/acceso"
            android:theme="@style/EditTextBlack"
            />
        <android.support.design.widget.TextInputEditText
            android:id="@+id/wifi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wifi"
            android:theme="@style/EditTextBlack"
            />


    </LinearLayout>



</android.support.design.widget.CoordinatorLayout>
