<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"

    tools:context="com.example.juanacastro.foodoclock.view.RegisterActivity">


    <include layout="@layout/actionbar_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_vertical_margin"
        android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/createhere">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name"
                    android:theme="@style/EditTextBlack"
                    />


            </android.support.design.widget.TextInputLayout>

             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:theme="@style/EditTextBlack"
                 android:layout_marginTop="@dimen/createhere">

                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/Correo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/Correo"
                     android:theme="@style/EditTextBlack"/>


             </android.support.design.widget.TextInputLayout>


             <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/createhere" >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:theme="@style/EditTextBlack"/>


            </android.support.design.widget.TextInputLayout>

             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:theme="@style/EditTextBlack"
                 android:layout_marginTop="@dimen/createhere">

                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/Conpassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/Conpassword"
                     android:inputType="textPassword"
                     android:theme="@style/EditTextBlack"/>


             </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/boton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonRegister"
                android:theme="@style/RaisedButtonDark"/>




        </LinearLayout>



    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
