<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    android:id="@+id/pictureCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/edit_cardview"
    cardview:cardCornerRadius="@dimen/radius_cardview"

    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/edit_cardview"
        >


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/RpictureCard"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_cardview"
                android:background="@drawable/creps"
                android:scaleType="centerCrop"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/edit_cardview"
                >

                <CheckBox
                    android:id="@+id/likecheck"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector"

                    />
            </LinearLayout>


        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/edit_cardview"
                >
                <TextView
                    android:id="@+id/Name_restaurant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Restaurante_name"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/title_restaurant"

                    />

                <TextView
                    android:id="@+id/Distancia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@id/Name_restaurant"
                    android:text="@string/distancia"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/title_restaurant"

                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/edit_cardview"
                >


                <TextView
                    android:id="@+id/ubicacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ubicacion"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/title_restaurant"
                    />

                <TextView
                    android:id="@+id/tipo_restaurante"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tipo_comida"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/title_restaurant"
                    android:layout_marginLeft="90sp"/>

                <TextView
                    android:id="@+id/puntaje"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/puntaje"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:layout_alignRight="@id/ubicacion"
                    android:textSize="@dimen/title_restaurant"
                    />

            </RelativeLayout>




        </LinearLayout>


    </LinearLayout>


</android.support.v7.widget.CardView>